--- a/src/main/resources/fxml/librarian/librarianLoansTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianLoansTab.fxml
@@ -9,6 +9,9 @@
     <BorderPane>
         <top>
             <AnchorPane>
+                <Label layoutX="11.0" layoutY="14.0" text="User:" />
+                <TextField fx:id="txtSearch" layoutX="43.0" layoutY="10.0" />
+                <Button fx:id="btnSearch" layoutX="187.0" layoutY="10.0" text="Search" />
                 <Label layoutX="257.0" layoutY="14.0" text="Between:" />
                 <DatePicker fx:id="dateStart" layoutX="310.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0" />
                 <Label layoutX="435.0" layoutY="14.0" text="and" />
