--- a/src/main/resources/fxml/librarian/librarianUsersTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianUsersTab.fxml
@@ -33,5 +33,13 @@
                 </BorderPane.margin>
             </TableView>
         </center>
+        <top>
+            <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+                <children>
+                    <TextField fx:id="txtSearch" layoutX="432.0" layoutY="10.0" />
+                    <Button fx:id="btnSearch" layoutX="577.0" layoutY="10.0" text="Search" />
+                </children>
+            </AnchorPane>
+        </top>
     </BorderPane>
 </Tab>
