--- a/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
@@ -11,13 +11,13 @@
         <top>
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
                 <Label layoutX="11.0" layoutY="14.0" text="User:"/>
-                <TextField fx:id="txtSearch" layoutX="43.0" layoutY="10.0"/>
-                <Button fx:id="btnSearch" layoutX="187.0" layoutY="10.0" text="Search"/>
+                <TextField fx:id="txtSearch" layoutX="43.0" layoutY="10.0" onKeyPressed="#searchIfEnterPressed"/>
+                <Button layoutX="187.0" layoutY="10.0" text="Search" onAction="#searchInternal"/>
                 <Label layoutX="257.0" layoutY="14.0" text="Between:"/>
-                <DatePicker fx:id="dateStart" layoutX="310.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0"/>
+                <DatePicker fx:id="dateStart" layoutX="310.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0" onAction="#searchInternal"/>
                 <Label layoutX="435.0" layoutY="14.0" text="and"/>
-                <DatePicker fx:id="dateEnd" layoutX="460.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0"/>
-                <Button fx:id="btnClearDate" layoutX="585.0" layoutY="10.0" text="Clear"/>
+                <DatePicker fx:id="dateEnd" layoutX="460.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0" onAction="#searchInternal"/>
+                <Button layoutX="585.0" layoutY="10.0" text="Clear" onAction="#clearDate"/>
             </AnchorPane>
         </top>
         <center>
@@ -34,7 +34,7 @@
             </TableView>
         </center>
         <bottom>
-            <Button fx:id="btnRecordPayment" text="Record a Payment"
+            <Button fx:id="btnRecordPayment" text="Record a Payment" onAction="#loadRecordPaymentPage"
                     prefHeight="25.0" prefWidth="192.0" BorderPane.alignment="CENTER">
                 <BorderPane.margin>
                     <Insets bottom="7.0" top="8.0"/>
